# model_grabber

./: .env.example  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
src/model_grabber/: __init__.py  cli.py  config.py  constants.py  downloader.py  env.py  exceptions.py  main.py  models.py  parser.py
test/: test_main.py
tests/: test_smoke.py
